tests/specs/run/error_005_missing_dynamic_import/error_005_missing_dynamic_import.ts.out
error: Uncaught (in promise) TypeError: Module not found "[WILDCARD]/bad-module.ts".
  const _badModule = await import("./bad-module.ts");
                     ^
    at async file://[WILDCARD]/error_005_missing_dynamic_import.ts:2:22
